# ehs-ai-demo-hosted

./: .env.example  .gitignore  ALGONQUIN_CONSUMPTION_ANALYSIS_REPORT.md  CLAUDE.md  DOCKER_README.md  algonquin_consumption_summary.py  algonquin_summary_report.json  docker-compose.prod.yml  docker-compose.yml  electricity_update_report.md  query_algonquin_consumption.py  setup-volumes.sh  update_electricity_consumption.py
data-foundation/: BACKUP_INVENTORY_20250918_230044.md  CLAUDE.md  README.md  all_endpoints_test_results.txt  api_extraction_test_results.txt  api_test_log_detailed.txt  citation_validation_test.sh  cypher_execution_report.json  cypher_queries.json  ehs_extraction_test_results.txt  electrical_consumption_test.txt  electrical_consumption_test_summary.txt  final_comprehensive_test.sh  full_ingestion_extraction_test.sh  langsmith_test_results_20250827_220419.json  langsmith_test_results_20250827_220734.json  langsmith_test_results_20250827_221034.json  llm_usage_summary.md  pipeline_test_results.json  post_ingestion_extraction_test.txt  prorating_mwe_results.json  pyproject.toml  restart_services.sh  simple_post_ingestion_test.sh  stage3_citation_analysis_20250918_184123.md  test_all_endpoints.sh  test_all_endpoints_fixed.sh
data-foundation/backend/: ENVIRONMENTAL_DATA_SUMMARY.md  EXECUTIVE_DASHBOARD_IMPLEMENTATION_SUMMARY.md  PHASE1_MIGRATION_README.md  RAG_INTEGRATION_SUMMARY.md  README_EXECUTIVE_DASHBOARD.md  RISK_ASSESSMENT_DEMO_README.md  RISK_ASSESSMENT_UNIT_CONVERSION_FIXES.md  SIMPLE_REJECTION_API_README.md  api_test.sh  check_allocation_details.py  check_allocations.py  check_docs_detail.py  check_neo4j_ingestion.py  correct_co2_implementation.py  create_complete_test_doc.py  create_test_document_with_uuid.py  create_test_prorating.py  detailed_neo4j_check.py  edit_context_retriever.py  ehs_goals_load_report_20250831_201501.json  environmental_data_load_report_20250831_184358.json  examine_neo4j_phase1.py  example_dashboard_usage.py  fix_co2_queries.py  migrate_phase1_schema.py  neo4j_phase1_examination_report_20250823_131216.txt  neo4j_phase1_examination_report_20250823_131813.txt  neo4j_phase1_examination_report_20250830_093436.txt  nohup.out  prorate_existing_doc.py  prorating_mwe_results.json  prorating_test_results.json  pytest.ini  query_consumption_data.py  requirements-test.txt  run_batch_ingestion.py  run_houston_risk_assessment.py  run_prorating.py  run_rejection_tests.py  run_risk_assessment_tests.py  (+32 more)
data-foundation/docs/: AUDIT_TRAIL_DOWNLOAD_IMPLEMENTATION_PLAN.md  DOCUMENT_REJECTION_TRACKING_TECHNICAL_SPEC.md  ELECTRIC_BILL_LABEL_FIX.md  ELECTRIC_BILL_RAG_IMPLEMENTATION.md  EXECUTIVE_DASHBOARD_JSON_STRUCTURES.md  EXECUTIVE_DASHBOARD_LOGIC.md  EXECUTIVE_DASHBOARD_NEO4J_SCHEMA.md  EXTRACTION_WORKFLOW.md  HISTORICAL_DATA_GENERATION_PLAN.md  IMPLEMENTATION_PLAN.md  INGESTION_WORKFLOW.md  LLM_RISK_ASSESSMENT_AGENT_PLAN.md  MOCK_REMOVAL_STRATEGY.md  NEO4J_DATA_POPULATION_PLAN.md  PHASE1_INTEGRATION_STATUS_REPORT.md  PHASE1_INTEGRATION_STEPS.md  PHASE1_REAL_TESTING_IMPLEMENTATION_PLAN.md  PHASE1_TESTING_TIMELINE_AND_MILESTONES.md  PHASE1_TEST_AVAILABILITY_REPORT.md  PHASE1_UNIT_TEST_IMPLEMENTATION.md  PRORATING_IMPLEMENTATION_PLAN.md  RISK_ASSESSMENT_AGENT_ARCHITECTURE.md  RISK_ASSESSMENT_AGENT_TRANSCRIPT.md  SETUP.md  TEST_INVENTORY.md  VISUAL_TESTING_GUIDE.md  WASTE_MANIFEST_RAG_IMPLEMENTATION.md  WASTE_MANIFEST_RAG_PLAN.md  WATER_BILL_RAG_IMPLEMENTATION.md  WATER_BILL_RAG_PLAN.md  WEB_APP.md  document-ingestion-architecture.md  document_rejection_integration_plan.md  ehs_extraction_api_guide.md  ehs_extraction_api_implementation_summary.md  implementation-status.md  ingestion_llm_instructions.md  llm_environmental_assessment_action_plan.md  neo4j-config.md  neo4j_location_hierarchy_plan.md  (+7 more)
data-foundation/logs/: WASTE_MANIFEST_NEO4J_REPORT.md  api_docs.html  cypher_execution_report.txt  ehs_extraction_test_script.sh  electrical_consumption_formatted.json  extracted_utility_data.json
data-foundation/neo4j-data/: BACKUP_VERIFICATION_FINAL_REPORT.md  analyze_backup_restore_capability.py  backup_neo4j_comprehensive.py  backup_restore_analysis_20250909_081305.json  backup_restore_analysis_20250909_081409.json  backup_verification_report_20250909_075338.txt  backup_verification_report_20250909_075425.txt  backup_verification_report_20250909_075909.txt  catalog_neo4j_data.py  diagnose_restore_issue.py  neo4j_catalog_20250908_215256.json  neo4j_catalog_20250908_215256.md  restore_neo4j_full.py  verify_backup_completeness.py
data-foundation/reports/: ehs_report_QueryType.CUSTOM_20250817_232437.txt  ehs_report_QueryType.CUSTOM_20250817_235548.txt  ehs_report_QueryType.CUSTOM_20250818_001922.txt  ehs_report_QueryType.CUSTOM_20250818_023441.txt  ehs_report_QueryType.CUSTOM_20250818_023451.txt  ehs_report_QueryType.CUSTOM_20250818_152141.json  ehs_report_QueryType.CUSTOM_20250818_152153.json  ehs_report_QueryType.CUSTOM_20250818_152201.json  ehs_report_QueryType.CUSTOM_20250818_152211.json  (+36 more)
ehs-analytics/: .env.example  .gitignore  API_IMPLEMENTATION_SUMMARY.md  DEBUG_FINDINGS_SUMMARY.md  Dockerfile  HYBRID_CYPHER_IMPLEMENTATION.md  README.md  VERIFICATION_RESULTS.md  add_test_data.py  api_test_results.md  check_facilities.py  corrected_neo4j_test.py  create_sample_ehs_data.py  debug_chain_creation.py  debug_cypher_chain.py  debug_cypher_chain_final.py  debug_cypher_chain_improved.py  debug_langchain_parsing.py  direct_neo4j_test.py  enhanced_neo4j_test.py  example_hybrid_cypher_usage.py  final_test.py  find_template_vars.py  houston_investigation.py  houston_investigation_fixed.py  logging_config.py  minimal_text2cypher_test.py  phase3_validation_report_20250821_172626.txt  phase3_validation_report_20250821_174658.txt  phase3_validation_report_20250821_175706.txt  phase3_validation_report_20250821_180127.txt  pyproject.toml  test_api_endpoints.sh  test_comprehensive_ehs_text2cypher.py  test_ehs_text2cypher.py  test_neo4j_connection.py  test_neo4j_indexes.py  test_phase2_cypher_generation.py  test_phase2_final.py  test_phase2_final_summary.py  (+17 more)
(+682 files in other folders)
